Change package name

--- a/mrfse/DESCRIPTION
+++ b/mrfse/DESCRIPTION
@@ -1,8 +1,8 @@
-Package: mrfe
-Title: Markov Random Field estimator
+Package: mrfse
+Title: Markov random field structure estimator
 Version: 0.1
-Date: 2019-08-02
-Description: A Markov Random Field estimator that uses a penalized
+Date: 2019-08-06
+Description: A markov random field structure estimator that uses a penalized
 	      maximum conditional likelihood method similar to the Bayesian
 	      Information Criterion (Frondana, 2016).
 License: GPL (>= 3)
