--- a/mrfse/DESCRIPTION
+++ b/mrfse/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: mrfse
-Title: Markov random field structure estimator
+Title: Markov Random Field Structure Estimator
 Version: 0.1
 Date: 2019-08-06
 Description: A Markov random field structure estimator that uses a penalized
 	      maximum conditional likelihood method similar to the Bayesian
-	      Information Criterion (Frondana, 2016).
+	      Information Criterion
+	      (Frondana, 2016) <doi:10.11606/T.45.2018.tde-02022018-151123>.
 License: GPL (>= 3)
 Author: Rodrigo Carvalho [aut, cre], Florencia Leonardi [rev, ths]
 Maintainer: Rodrigo Carvalho <rodrigorsdc@gmail.com>
